deployments/argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.${BASE_DOMAIN}`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    # - kind: Rule
    #   match: Host(`argocd.${BASE_DOMAIN}`) && Headers(`Content-Type`, `application/grpc`)
    #   priority: 11
    #   services:
    #     - name: argocd-server
    #       port: 80
    #       scheme: h2c
  tls:
      secretName: argocd.${BASE_DOMAIN}

# letsencrypt-cert.yaml
